--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ layout: default
     <h2 class="text-center">Announcing Different Games 2018</h2>
     <p class="text-center">
       Now accepting submissions for presentations and games!
-      Thanks for making it a success!
-      Hope to see you next year~!
+      Please view our <a href="https://docs.google.com/forms/d/e/1FAIpQLSeflAqISKjZcPgxtjYSSmyH5KuG-PBM9oJEQZmUIscr5QxIgw/viewform?usp=sf_link">Call for Participation</a> and our <a href="https://docs.google.com/forms/d/e/1FAIpQLSc52-BjCiQlqYUSU9cDRFWbfqfTQ0bEg6ev4hafZHAEufVNAw/viewform?usp=sf_link">Call for Games</a>.
     </p>
   </div>
 </div>
