--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 <div class="row">
   <div class="col-xs-12 col-md-6 pw-section pw-masthead conf">
     <p class="blurb">
-      We are pleased to announce that the 2018 edition of Different Games Conference will take place on <strong>October 12-14, 2018</strong> at Worcester Polytechnic Institute (WPI) in <strong>Worcester, MA!</strong>
+      We are pleased to announce the 2018 edition of Different Games Conference will take place on <strong>October 12-14, 2018</strong> at Worcester Polytechnic Institute (WPI) in <strong>Worcester, MA!</strong>
     </p>
   </div>
   <div class="col-xs-12 col-md-6 pw-section">
